# fw

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  README.org  appveyor.yml  build_packages.sh  package.sh  rustfmt.toml  search-index.js
.github/: dependabot.yml
.github/workflows/: dependabot-validate.yml  release.yml  rust.yml
completions/zsh/: _fw  _nworkon  _workon
doc/: installation.md  installation.org  sample_config.json  usage.md  usage.org
doc/example_config/: settings.toml
doc/example_config/projects/default/: docker  fw  pybuilder
doc/example_config/tags/default/: brogo  fkbr  git  js  python  rust
doc/example_config/tags/github/brocode/: brocode
fw/: index.html
logo/: fw_cmyk.eps  fw_rgb.eps
man/: Cargo.toml  fw.1
man/src/: main.rs
smoke/resources/: zshrc
src/: main.rs  setup.zsh
src/app/: mod.rs
src/cli/: mod.rs
src/config/: metadata.rs  metadata_from_repository.rs  mod.rs  path.rs  project.rs  settings.rs
src/errors/: mod.rs
src/export/: mod.rs
src/fw/: main.rs.html
src/fw/config/: mod.rs.html
src/fw/errors/: mod.rs.html
src/fw/projectile/: mod.rs.html
src/fw/setup/: mod.rs.html
src/fw/sync/: mod.rs.html
src/fw/workon/: mod.rs.html
src/git/: mod.rs
src/intellij/: mod.rs
src/man/: Cargo.toml
src/man/src/: main.rs
src/nconfig/: mod.rs
src/project/: mod.rs
src/projectile/: mod.rs
src/setup/: mod.rs
src/shell/: mod.rs  setup.bash  setup.fish  setup.zsh  workon-fzf.bash  workon-fzf.fish  workon-fzf.zsh  workon-sk.bash  workon-sk.fish  workon-sk.zsh  workon.bash  workon.fish  workon.zsh
src/spawn/: mod.rs
src/sync/: mod.rs
src/tag/: mod.rs
src/util/: mod.rs
src/workon/: mod.rs
src/ws/github/: mod.rs
