[package]
name = "fw"
version = "2.16.1"
authors = ["brocode <bros@brocode.sh>"]
description = "faster workspace management"
license = "WTFPL"
categories = ["command-line-utilities"]
repository = "https://github.com/brocode/fw"
readme = "README.org"
keywords = ["workspace", "productivity", "cli", "automation", "developer-tools" ]
edition = "2021"
include = ["src/**/*", "LICENSE", "README.org"]

[dependencies]
walkdir = "2"
dirs = "5"
slog-term = "2"
sloggers = "2"
toml = "0.7"
slog-async = "2"
serde_json = "1.0.3"
serde = {version = "1", features = ["derive"] }
git2 = "0.17"
maplit = "1.0"
rayon = "1"
regex = "1"
yansi = "0.5.1"
atty = "0.2"
rand = "0.8"
crossbeam = "0"
indicatif = "0"
openssl-probe = "0.1"
gitlab = "0.1511"
reqwest = { version = "0", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }

openssl = { version = "0.10", features = ["vendored"] }

[dependencies.clap]
version = "4"
features = ["cargo"]

[dependencies.slog]
version = "2"
features = ["release_max_level_trace", "max_level_trace"]
