[package]
name = "fw"
version = "2.21.0"
authors = ["brocode <bros@brocode.sh>"]
description = "faster workspace management"
license = "WTFPL"
categories = ["command-line-utilities"]
repository = "https://github.com/brocode/fw"
readme = "README.md"
keywords = ["workspace", "productivity", "cli", "automation", "developer-tools" ]
edition = "2024"
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
walkdir = "2"
dirs = "6"
toml = "0.8"
serde_json = "1.0.140"
serde = {version = "1", features = ["derive"] }
git2 = "0.20"
maplit = "1.0"
rayon = "1"
regex = "1"
rand = "0.9"
crossbeam = "0"
indicatif = "0"
openssl-probe = "0.1"
reqwest = { version = "0", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }

[dependencies.clap]
version = "4"
features = ["cargo"]

[dependencies.yansi]
version = "1"
features = ["detect-env"]
